--- a/Financier.Web.FinancialStatements/index.html
+++ b/Financier.Web.FinancialStatements/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
     </head>
     <body>
-        <div id="root">
+        <div class="root">
         </div>
         <!-- Contains both JavaScript and CSS -->
         <script src="dist/main.js"></script>
