--- a/Financier.Web.FinancialStatements/index.html
+++ b/Financier.Web.FinancialStatements/index.html
@@ -8,7 +8,7 @@
         <div class="root">
         </div>
         <!-- Contains both JavaScript and CSS -->
-        <script src="dist/main.js"></script>
+        <script src="/dist/main.js"></script>
     </body>
 </html>
 
