--- a/Financier.Web.FinancialStatements/index.html
+++ b/Financier.Web.FinancialStatements/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <div class="root">
+            <h1>Financier</h1>
         </div>
         <!-- Contains both JavaScript and CSS -->
         <script src="/dist/main.js"></script>
