--- a/Financier.Web.FinancialStatements/index.html
+++ b/Financier.Web.FinancialStatements/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Dan Ofer</title>
+        <title>Financier</title>
         <meta charset="utf-8" />
     </head>
     <body>
         <div class="root">
             <h1>Financier</h1>
         </div>
+
         <!-- Contains both JavaScript and CSS -->
         <script src="/dist/main.js"></script>
     </body>
