--- a/Financier.Web.FinancialStatements/index.html
+++ b/Financier.Web.FinancialStatements/index.html
@@ -3,10 +3,11 @@
     <head>
         <title>Financier</title>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
         <div class="root">
-            <h1>Financier</h1>
+            <h1 class="main-header">Financier</h1>
         </div>
 
         <!-- Contains both JavaScript and CSS -->
